fix lint error <bound#58784087>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -220,7 +220,7 @@ From {{inh|en|enm|*bounden}} (attested as {{m|enm|bounten}}), from {{der|en|fr|b
 {{en-noun}}
 
 # A sizeable [[jump]], great leap.
-#: ''The deer crossed the stream in a single '''bound'''.
+#: ''The deer crossed the stream in a single '''bound'''.''
 # A [[spring]] from one [[foot]] to the other in [[dancing]].
 # {{lb|en|dated}} A [[bounce]]; a [[rebound]].
 #: ''the '''bound''' of a ball''
@@ -260,7 +260,7 @@ From {{inh|en|enm|*bounden}} (attested as {{m|enm|bounten}}), from {{der|en|fr|b
 |title={{w|A Perfect Spy}}
 |section=
 |passage= They make love, he hauls her to the bath, washes her, hauls her out and dries her, and twenty minutes later Mary and Magnus are '''bounding''' across the little park on the top of Döbling like the happy couple they nearly are, past the sandpits and the climbing frame that Tom is too big for, past the elephant cage where Tom kicks his football, down the hill towards the Restaurant Teheran which is their improbable pub because Magnus so adores the black and white videos of Arab romances they play for you with the sound down while you eat your couscous and drink your Kalterer.}}
-#: ''The rabbit '''bounded''' down the lane.
+#: ''The rabbit '''bounded''' down the lane.''
 # {{lb|en|transitive}} To cause to leap.
 #: ''to '''bound''' a horse''
 #* {{RQ:Shakespeare Henry 5}}, Act V, Scene II, [http://internetshakespeare.uvic.ca/Library/facsimile/book/Bran_F1/447/?zoom=800 page 93]:
@@ -299,8 +299,8 @@ From {{inh|en|enm|bound}}, {{m|enm|bownde}}, alternation (with '''-d''' partly f
 
 # {{lb|en|obsolete}} [[ready|Ready]], [[prepared]].
 ## Ready to start or go (to); moving in the direction (of).
-##: ''Which way are you '''bound'''?
-##: ''Is that message '''bound''' for me?
+##: ''Which way are you '''bound'''?''
+##: ''Is that message '''bound''' for me?''
 ##* {{RQ:Shakespeare Tempest|act=I|scene=ii|page=4|passage={{w|Ariel (The Tempest)|''Ar.''}} {{...}}and for the reſt o'th' Fleet / (Which I diſpers'd) they all haue met againe, / And are vpon the ''Mediterranean'' [[flote|Flote]] / '''Bound''' ſadly home for ''Naples'', / Suppoſing that they ſaw the King[['s|s]] ſhip wrackt, / And his great perſon periſh.}}
 
 =====Derived terms=====
