--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -152,6 +152,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Swedish: {{t|sv|slå vad}}
 * Thai: {{t+|th|พนัน}}, {{t+|th|เดิมพัน}}
 * Turkish: {{t-needed|tr}}
+* Ukrainian: {{t+|uk|би́тися об закла́д}}
 * Vietnamese: {{t+|vi|cá}}, {{t|vi|cược}}, {{t|vi|cá cược}}
 * Welsh: {{t-needed|cy}}
 {{trans-bottom}}
