/* Noun */ # {{lb|en|slang}} A [[CB radio]] [[antenna]]. #* '''1982''', ''Amateur Radio'' (volume 38, issues 7-12, page 34) #*: {{...}} despite the absence of the proverbial home-grown 75-foot high steel "'''sky hook'''." <skyhook#58784630>

--- a/en/s/skyhook.801551.wikitext
+++ b/en/s/skyhook.801551.wikitext
@@ -57,6 +57,9 @@
 |passage=Jeta stood with her knobbly fists on her hips watching the two of them Goo the cylinders to the '''skyhooks'''. Those were the invaluable little workhorses of the construction forces everywhere. A simple but powerful grav unit with a winch and a hook.
 }}
 # A [[helicopter]] that lifts and transports heavy objects suspended by a heavy cable.
+# {{lb|en|slang}} A [[CB radio]] [[antenna]].
+#* '''1982''', ''Amateur Radio'' (volume 38, issues 7-12, page 34)
+#*: {{...}} despite the absence of the proverbial home-grown 75-foot high steel "'''sky hook'''."
 
 ====Translations====
 {{trans-top|imaginary hook suspended in the air}}
