/* Translations */ Added Latin translation of this word. <bound#58787295>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -203,6 +203,7 @@ From {{inh|en|enm|bounden}}, from the noun (see above).
 * German: {{t+|de|begrenzen}}, {{t+|de|umgrenzen}}
 * Hungarian: {{t+|hu|határol}}
 * Italian: {{t+|it|confinare}}, {{t+|it|accerchiare}}, {{t+|it|delimitare}}
+* Latin: {{t|la|terminō}}
 * Portuguese: {{t+|pt|limitar}}
 * Russian: {{t+|ru|ограни́чивать}}
 * Spanish: {{t+|es|limitar}}
