/* Further reading */ <theory#58790472>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -303,8 +303,11 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 
 [[Category:Check translations]]
 
-===Further reading===
+===References===
+* {{R:OneLook}}
+* {{R:Keywords 21st}}
 * {{R:Keywords|page=316}}
+* {{R:Century 1911}}
 
 ===Anagrams===
 * {{anagrams|en|a=ehorty|Yother|thyreo-}}
