--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -63,7 +63,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Polish: {{t+|pl|czworokąt|m-in}}, {{t+|pl|czworobok|m-in}}
 * Portuguese: {{t+|pt|quadrilátero|m}}, {{t+|pt|quadrângulo|m}}
 * Romanian: {{t+|ro|patrulater}}, {{t|ro|cadrilater}}
-* Russian: {{t+|ru|четырёхуго́льник|m|tr=četyrjoxugólʹnik}}
+* Russian: {{t+|ru|четырёхуго́льник|m}}
 * Serbo-Croatian: {{t|sh|četverougao}}
 * Slovak: {{t|sk|štvoruholník|m}}
 * Slovene: {{t|sl|štirikotnik|m}}
@@ -106,7 +106,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Polish: {{t+|pl|czworoboczny}}
 * Portuguese: {{t+|pt|quadrilátero}}, {{t|pt|quadrilateral}}
 * Romanian: {{t+|ro|cvadrilateral|m}}
-* Russian: {{t+|ru|четырёхсторо́нний|tr=četyrjoxstorónnij}}
+* Russian: {{t+|ru|четырёхсторо́нний}}
 * Slovak: {{t|sk|štvorstranný}}
 * Spanish: {{t+|es|cuadrilátero}}
 * Tagalog: {{t|tl|patsihain}}
