--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -137,7 +137,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 {{trans-top|soon afterward}}
 * Albanian: {{t+|sq|pastaj}}
 * Arabic: {{t+|ar|ثُمَّ}}
-*: Moroccan Arabic: {{t|ary|منْبعْد|tr=mənbəʿd}}, {{t|ary|عاد|tr=ʿæd}}
+*: Moroccan Arabic: {{t|ary|من بعد|tr=men baʿd}}
 * Armenian: {{t+|hy|հետո}}
 * Azerbaijani: {{t+|az|sonra}}
 * Belarusian: {{t|be|заты́м}}
