--- a/en/i/innoxious.775634.wikitext
+++ b/en/i/innoxious.775634.wikitext
@@ -1,19 +1,16 @@
 ==English==
 
 ===Etymology===
-From {{af|en|in-|noxious}}.
+From {{der|en|la|innoxius}}.
 
 ===Adjective===
-{{head|en|adjective}}
+{{en-adj}}
 
-# {{lb|en|archaic}} having no [[harmful]] effect
+# {{lb|en|archaic}} Having no [[harmful]] effect; [[harmless]], [[innocuous]].
 #* '''1669''', {{w|Walter Charleton}}, “Of the Mysterie of Vintners” in ''Two Discourses'', London: William Whitwood, p. 165,<sup>[https://catalog.hathitrust.org/Record/012393162]</sup>
 #*: But of all wayes of hastening the Clarification and Ripening of new Wine, none seems to me to be either more easie, or more '''innoxious''', than that borrowed from one of the Ancients by the ''Lord Chancellor Bacon'', {{...}} which is by putting the wine into vessels well stopped, and letting it down into the Sea.
 #* '''1720''', {{w|Alexander Pope}}, ''The {{w|Iliad}} of {{w|Homer}}'', London: Bernard Lintot, Volume 5, Book 17, p. 31,<sup>[http://name.umdl.umich.edu/004836009.0001.005]</sup>
-#*: Now at ''Automedon'' the ''Trojan'' Foe
-#*: Discharg’d his Lance; the meditated Blow
-#*: Stooping, he shun’d; the Jav’lin idly fled,
-#*: And hiss’d '''innoxious''' o’er the Hero’s Head:
+#*:[T]he Jav’lin idly fled, / And hiss’d '''innoxious''' o’er the Hero’s Head […].
 #* '''1818''', {{w|Jane Austen}}, ''[[w:Persuasion (novel)|Persuasion]]'', Chapter 14,<sup>[http://www.gutenberg.org/files/105/105-h/105-h.htm]</sup>
 #*: Everybody has their taste in noises as well as in other matters; and sounds are quite '''innoxious''', or most distressing, by their sort rather than their quantity.
 #* '''1875''', A. Hutchison Smee, ''Milk in Health and Disease'', London: Edward Newman, p. 13,<sup>[https://archive.org/details/b23984223]</sup>
