/* Translations */ <second coming#58795552>

--- a/en/s/second coming.746616.wikitext
+++ b/en/s/second coming.746616.wikitext
@@ -21,7 +21,7 @@
 * Mongolian: {{t|mn|хоёр дахь ирэлт|sc=Cyrl}}
 * Portuguese: {{t|pt|segunda vinda|f}}
 * Romanian: {{t|ro|a doua venire|f}}
-* Russian: {{t|ru|второе пришествие|n|tr=vtoroe prishestvie}}
+* Russian: {{t|ru|второе пришествие|n}}
 * Spanish: {{t|es|segunda venida|f}}
 {{trans-bottom}}
 
