/* Translations */ <whatever it takes#58801709>

--- a/en/w/whatever it takes.775539.wikitext
+++ b/en/w/whatever it takes.775539.wikitext
@@ -21,7 +21,7 @@
 * Portuguese: {{t|pt|custe o que custar}}
 {{trans-mid}}
 * Romanian: {{t|ro|a face orice este necesar}}
-* Russian: {{t+|ru|во что́ бы то ни ста́ло|tr=vo štó by to ni stálo}}
+* Russian: {{t+|ru|во что́ бы то ни ста́ло}}
 * Spanish: {{t|es|todo lo que sea necesario}}, {{t|es|cueste lo que cueste}}
 {{trans-bottom}}
 
