--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -283,7 +283,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Persian: {{t+|fa|وزنه|tr=vazne|sc=fa-Arab}}
 * Portuguese: {{t+|pt|peso|m}}, {{t+|pt|haltere|m}}
 * Romanian: {{t+|ro|halteră}}, {{t|ro|haltere|f-p}}, {{t+|ro|greutate|f}}
-* Russian: {{t+|ru|блин|m}}, {{t+|ru|ги́ря|f}} ''dumbbell'', {{t+|ru|ганте́ль|f|tr=gantɛ́lʹ}} ''barbell''
+* Russian: {{t+|ru|блин|m}}, {{t+|ru|ги́ря|f}} {{q|dumbbell}}, {{t+|ru|ганте́ль|f|tr=gantɛ́lʹ}} {{q|barbell}}
 * Scots: {{t|sco|weicht}}
 * Spanish: {{t+|es|pesa|f}}
 * Swedish: {{t+|sv|vikt|c}}, {{t+|sv|tyngd|c}}
