--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -6,7 +6,7 @@
 {{PIE root|en|weǵʰ}}
 From {{inh|en|enm|weight}}, {{m|enm|weiȝte}}, {{m|enm|weght}}, {{m|enm|wight}}, from {{inh|en|ang|wiht}}, {{m|ang|ġewiht||weight}}, from {{inh|en|gem-pro|*wihtiz}} {{gloss|"weight"; compare {{m|gem-pro|*weganą||to move}}}}, from {{inh|en|ine-pro|*weǵʰ-||to move; pull; draw; drive}}.
 
-Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||scale}}, {{m|stq|Gewicht||weight}}, {{cog|fy|gewicht||weight}}, {{cog|nl|gewicht||weight}}, {{cog|nds-de|Wicht}}, {{m|nds-de|Gewicht||weight}} and {{cog|de|Gewicht||weight}}.
+Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||scale}} and {{m|stq|Gewicht||weight}}, {{cog|fy|gewicht||weight}}, {{cog|nl|gewicht||weight}}, {{cog|nds-de|Wicht}}, {{m|nds-de|Gewicht||weight}} and {{cog|de|Gewicht||weight}}.
 
 ===Pronunciation===
 * {{enPR|wāt}}, {{IPA|en|/weɪt/}}
