--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -17,6 +17,11 @@ From {{der|en|frm|pole|t=hen}} + {{m|en|cat}}. Origin unknown, possible explanat
 ##*: By the little garden pergola open to the winds some fluttered peacocks were blotted nervelessly amid the dripping trees, their heads sunk back beneath their wings: while in the pergola itself, like a fallen storm-cloud, lolled a negress, her levelled, '''polecat''' eyes semi-veiled by the nebulous alchemy of the rainbow.
 ##: {{syn|en|fitch|foumart}}
 # {{lb|en|US|dialect}} A [[skunk]].
+# {{lb|en|television}} A tubular device used to support lights on a set.
+#* '''1991''', Gerald Millerson, ''The Technique of Lighting for Television and Film'' (page 323)
+#*: This is adjustable telescopic tubing, wedged securely between floor and ceiling (vertical pole) or wall-to-wall (horizontal pole), within corridors, arches, window openings, doorways, etc. It may be held in position by a strong internal spring or end-screws. Designs include '''''polecat''', varipole, barricuda, jack tube, Acrow''.
+#* '''2013''', Alan Bermingham, ''Location Lighting for Television'' (page 196)
+#*: This uses a battery-operated HMI/MSR 200 W rigged on a magic arm fastened to a vertical ''''pole-cat''''. Check that the car roof is suitable for this application and remember to include a clean card (beer mat) between the top of the '''pole-cat''' and the car roof!
 
 ====Derived terms====
 {{der4|en
