--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -86,7 +86,7 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 * Japanese: {{t|ja|捉える|tr=とらえる, toraeru}}, {{t+|ja|つかむ|tr=tsukamu}}
 {{trans-mid}}
 * Korean: {{t+|ko|붙잡다}}
-* Latin: {{t+|la|capere}}, {{t|la|possideo}}
+* Latin: {{t+|la|capere}}, {{t|la|possideo}}, {{t|la|prehendō}}
 * Mirandese: {{t|mwl|agarrar}}
 * Ngazidja Comorian: {{t|zdj|zingara|alt=uzingara}}, {{t|zdj|siha|alt=usiha}}
 * North Frisian: {{t|frr|gripe}}
