--- a/en/g/gushed.720108.wikitext
+++ b/en/g/gushed.720108.wikitext
@@ -4,7 +4,7 @@
 * {{IPA|en|/ɡʌʃt/}}
 
 ===Verb===
-{{head|en|verb you can please fucking asshole form}}
+{{head|en|verb form}}
 
 # {{en-past of|gush}}
 
