/* Synonyms */ +thesaurus <then#58836027>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -53,7 +53,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 ====Synonyms====
 * {{sense|at that time}} {{l|en|at the time}}, {{l|en|back in the day}}
 * {{sense|soon afterward}} {{l|en|and then}}, {{l|en|and so}}, {{l|en|subsequently}}, {{l|en|so}}
-* {{sense|next in order}} {{l|en|and then}}, {{l|en|followed by}}
+* {{sense|next in order}} {{l|en|and then}}, {{l|en|followed by}}; see also [[Thesaurus:then]]
 * {{sense|in that case}} {{l|en|accordingly}}, {{l|en|as a result}}; see also [[Thesaurus:therefore]]
 * {{sense|at the same time}} {{l|en|concurrently}}, {{l|en|therewhile}}; see also [[Thesaurus:simultaneously]]
 * {{sense|contradiction}}
