--- a/en/a/at the end of one's tether.776810.wikitext
+++ b/en/a/at the end of one's tether.776810.wikitext
@@ -18,6 +18,7 @@
 * Finnish: {{t|fi|[[olla]] [[katkeamispiste|katkeamispisteessä]]}}
 * French: {{t+|fr|au bout du rouleau}}, {{t+|fr|exaspéré}}
 {{trans-mid}}
+* German: {{t|de|mit seiner Geduld am Ende sein}}
 * Italian: {{t|it|al limite della sopportazione}}
 * Korean: {{t|ko|진퇴양난에 빠진}}
 * Scottish Gaelic: {{t|gd|aig an dùbhlan le}}
