--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia|dab=rot}}
 
 ===Etymology===
-From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, become corrupted, ulcerate, putrefy}}, from {{inh|en|gem-pro|*rutōną||to rot}}, from {{der|en|ine-pro|*rewd-||to tear}}. Cognate with {{cog|fy|rotsje||to rot}}, {{cog|nl|rotten||to rot}}, {{cog|de|verrotten||to rot}} and regional {{m|de|rößen||to steep flax}}, {{cog|is|rotna||to rot}}. See {{l|en|rotten}}.
+From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, become corrupted, ulcerate, putrefy}}, from {{inh|en|gem-pro|*rutāną||to rot}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|en|/ɹɒt/}}
