--- a/en/m/mouthwatering.720181.wikitext
+++ b/en/m/mouthwatering.720181.wikitext
@@ -28,5 +28,5 @@
 * Maori: {{t|mi|whakawaiwai}}, {{t|mi|mōwaiwai}}
 * Polish: {{t+|pl|apetyczny}}
 * Portuguese: {{t+|pt|de dar água na boca}}
-* Spanish: {{t|es|de toma pan y moja}}
+* Spanish: {{t|es|de toma pan y moja}}, {{t|es|se te hace la boca agua}}
 {{trans-bottom}}
