--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -43,7 +43,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 ====Derived terms====
 {{der3|en
 |Barry Island|coney island|desert island|floating island|Grand Island|Great Barrier Island
-|Green Island|heat island|high island
+|Green Island|Hayling Island|heat island|high island
 |interisland|Island County
 |islander|island dispenser|island display|island-hop|island maze|island platform|island position|island site|island state|island universe|islandwide|islandy|Kangaroo Island
 |kitchen island|Long Island|low island|Mersea Island|no man is an island|Norfolk Island
