--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -14,8 +14,7 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 {{en-verb|binds|binding|bound|bound|past_ptc2=bounden|past_ptc2_qual=archaic, rare}}
 
 # {{lb|en|intransitive}} To tie; to confine by any [[ligature]].
-#* {{rfdatek|en|Shakespeare}}
-#*: They that reap must sheaf and '''bind'''.
+#* {{RQ:Shakespeare As You Like IT|III|ii|passage=They that reap must sheaf and '''bind'''.}}
 # {{lb|en|intransitive}} To cohere or stick together in a mass.
 #: {{ux|en|Just to make the cheese more '''binding'''}}
 #* {{rfdatek|en|Mortimer}}
