--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -85,8 +85,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 {{en-verb|bets|betting|bet|past2=betted}}
 
 # To [[stake]] or [[pledge]] upon the outcome of an event; to [[wager]].
-#* {{rfdatek|en|Shakespeare}}
-#*: John a Gaunt loved him well, and '''betted''' much money on his head.
+#* {{RQ:Shakespeare Henry 4-2|III|ii|passage=John a Gaunt loved him well, and '''betted''' much money on his head.}}
 #* {{rfdatek|en|O. W. Holmes}}
 #*: I'll '''bet''' you two to one I'll make him do it.
 # To be [[sure]] of something; to be able to [[count]] on something.
