--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -324,7 +324,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 * Welsh: {{t+|cy|ynys|f}}
 * West Coast Bajau: {{t|bdr|pulou}}
 * West Frisian: {{t+|fy|eilân|n}}
-* Western Punjabi: {{t|pnb|ٹاپو|m|tr=ṭāpv}}
+* Western Panjabi: {{t|pnb|ٹاپو|m|tr=ṭāpv}}
 * Wolof: {{t|wo|dun}}
 * Xhosa: {{t|xh|isiqithi|c7|c8}}
 * Yaeyama: {{t|rys|島|tr=しぃま, sïma}}
