--- a/en/w/whatevs.803477.wikitext
+++ b/en/w/whatevs.803477.wikitext
@@ -35,7 +35,7 @@ From {{suffix|en|whatever|s}}
 * {{seeCites|en}}
 
 ===References===
-* {{cite-book|author=Peckham, Aaron (compiler)|year=2005|title=Urban Dictionary: Fularious Street Slang Defined|location=Kansas City|publisher=Andrews McMeel|isbn=0-7407-5143-3|page=331}}
+* {{cite-book|author=Peckham, Aaron (compiler)|year=2005|title=Urban Dictionary: Fularious Street Slang Defined|location=Kansas City|publisher=Andrews McMeel|isbn=0-7407-5143-3|page=331}}09p9olppķķli8
 
 === See also ===
 
