/* Translations */ <type system#58883716>

--- a/en/t/type system.775118.wikitext
+++ b/en/t/type system.775118.wikitext
@@ -15,5 +15,6 @@
 * Finnish: {{t|fi|tyyppijärjestelmä}}
 * German: {{t|de|Typsystem|n}}
 {{trans-mid}}
+* Greek: {{t|el|σύστημα τύπων|n}}
 * Serbo-Croatian: {{t|sh|sustav tipova|m}}, {{t|sh|sustav obilježja|m}}
 {{trans-bottom}}
