--- a/en/g/gagaku.801689.wikitext
+++ b/en/g/gagaku.801689.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|ja|en}} {{m|ja|雅楽|tr=gagaku}}, from {{etyl|ltc|en}} {{m|ltc|雅樂|tr=ngǽ-ngæwk||ancient ceremonial music}}.
+From {{etyl|ja|en}} {{m|ja|雅楽|tr=gagaku}}, from {{etyl|ltc|en}} {{m|ltc|雅樂|tr=ngǽ-ngæwk||ancient ceremonial music}}. {{doublet|en|aak|yayue}}.
 
 ===Noun===
 {{en-noun|-}}
