--- a/en/n/nove.26046.wikitext
+++ b/en/n/nove.26046.wikitext
@@ -129,8 +129,8 @@ From {{affix|la|novus|t1=new|-ē|pos2=adverbial suffix}}.
 From {{inh|pt|roa-opt|nove}}, from {{inh|pt|la|novem||nine}}, from {{inh|pt|ine-pro|*h₁néwn̥}}.
 
 ===Pronunciation===
-* {{a|Brazil}} {{IPA|pt|[ˈnɔ.vi]}}
-* {{a|Portugal}} {{IPA|pt|[ˈnɔ.vɨ]}}
+* {{a|Portugal}} {{IPA|pt|/ˈnɔ.vɨ/}}
+* {{a|Brazil}} {{IPA|pt|/ˈnɔ.vi/}}
 * {{hyphenation|pt|no|ve}}
 * {{rhymes|pt|ɔvi}}
 
