--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -32,15 +32,15 @@ The name given to [[Jacob]] in the [[Bible]] ({{RQ:Tanach|1|32|29}}), said to be
 * {{l|he|מְדִינַת יִשְׂרָאֵל}}
 
 ====Descendants====
-* {{desc|ar|إِسْرَائِيل}}
-* {{desc|grc|Ἰσρᾱήλ}}
+* {{desc|ar|إِسْرَائِيل|bor=1}}
+* {{desc|grc|Ἰσρᾱήλ|bor=1}}
 ** {{desc|el|Ισραήλ}}
 ** {{desc|la|Isrāēl}}
 *** {{desc|en|Israel}}
 *** {{desc|de|Israel}}
 *** Portuguese {{l|pt|Israel}}
 ** {{desc|ru|Изра́иль}}
-* {{desc|obm|𐤉𐤔𐤓𐤀𐤋}}
+* {{desc|obm|𐤉𐤔𐤓𐤀𐤋|bor=1}}
 
 ===References===
 * {{cite-book|last=Sachsse|first=Eduard|title=Die Bedeutung des Namens Israel. Eine quellen-kritische Untersuchung|publisher=Carl Georgi, Universitäts-Buchdruckerei und Verlag|location=Bonn|year=1910|lang=de|trans-title=The meaning of the name Israel. A source-critical investigation.|url=https://sammlungen.ub.uni-frankfurt.de/freimann/content/titleinfo/1282767}}
