--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -35,9 +35,9 @@ The name given to [[Jacob]] in the [[Bible]] ({{RQ:Tanach|1|32|29}}), said to be
 * {{desc|ar|إِسْرَائِيل|bor=1}}
 * {{desc|grc|Ἰσρᾱήλ|bor=1}}
 ** {{desc|el|Ισραήλ}}
-** {{desc|la|Isrāēl}}
-*** {{desc|en|Israel}}
-*** {{desc|de|Israel}}
+** {{desc|la|Isrāēl|bor=1}}
+*** {{desc|en|Israel|bor=1}}
+*** {{desc|de|Israel|bor=1}}
 *** Portuguese {{l|pt|Israel}}
 ** {{desc|ru|Изра́иль}}
 * {{desc|obm|𐤉𐤔𐤓𐤀𐤋|bor=1}}
