--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -31,6 +31,9 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 #* {{rfdate|en|Thackeray}}
 #*: '''Rot''', poor bachelor, in your club.
 # {{lb|en|transitive}} To expose, as flax, to a process of [[maceration]], etc., for the purpose of separating the [[fiber]]; to [[ret]].
+# {{lb|en|dated|slang}} To talk nonsense.
+#* '''1991''', {{w|Stephen Fry}}, ''[[:w:The Liar (novel)|The Liar]]'', p. 37:
+#*: Adrian thought it worth while to try out his new slang. ‘[[I say]], you [[fellow]]s, here's a [[rum go]]. Old Biffo was [[jolly]] odd this morning. He gave me a lot of [[pi-jaw]] about [[slacking]] and then invited me to [[tea]]. No '''rotting'''! He did really.’
 
 ====Synonyms====
 * {{l|en|putrefy}}
