--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -4,7 +4,7 @@
 {{en-interj}}
 
 # {{lb|en|colloquial}} An exclamation of [[amazement]].
-# {{lb|en|colloquial|sarcastic}} Said in response to an [[obvious]] statement.
+# {{lb|en|colloquial|sarcastic}} {{n-g|Said in response to an [[obvious]] statement.}}
 
 ====Synonyms====
 * {{sense|amazement}} {{l|en|really}}, {{l|en|no shit}}, {{l|en|never}}, {{l|en|no}}, {{l|en|no way}}, {{l|en|wow}}, {{l|en|is that so}}
