--- a/en/i/inside job.854992.wikitext
+++ b/en/i/inside job.854992.wikitext
@@ -24,7 +24,7 @@
 * Arabic: {{t|ar|سوء استغلال الوظيفَة}}
 * Chinese: [[幕]][[後]][[黑]][[手]]
 {{trans-mid}}
-* Finnish: {{t|fi|sisäpiirin keikka}}
+* Finnish: {{t|fi|[[sisäpiiri]]n [[keikka]]}}, {{t|fi|[[sisäpiiri]]n [[juttu]]}}; {{t|fi|sisäpiiri-isku}} {{q|attack}}
 * Polish: {{t|pl|robota wewnętrzna|f}}, {{t|pl|inside job|m}} {{qualifier|chiefly in conspiracy theories}}
 {{trans-bottom}}
 
