added Old Norse entry <bent#58926026>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -227,6 +227,20 @@ From {{m|hu|benn}}, following the example of {{m|hu|alant}} and {{m|hu|lent}}.<r
 
 ----
 
+==Old Norse==
+
+===Participle===
+{{head|non|participle form}}
+
+# {{infl of|non|bendr||str|n|nom//acc|s}}
+
+===Verb===
+{{non-verb form}}
+
+# {{infl of|non|benda||sup}}
+
+----
+
 ==Scots==
 
 ===Alternative forms===
