--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -423,6 +423,20 @@ From {{der|sq|ine-pro|*band||drop}}. Compare {{cog|xpg|βεδυ||water}}, {{cog|
 
 ----
 
+==Old Norse==
+
+===Participle===
+{{head|non|participle form}}
+
+# {{infl of|non|bendr||str|f|nom|s|;|str|n|nom//acc|p}}
+
+===Verb===
+{{non-verb form}}
+
+# {{infl of|non|benda||2|s|act|imp}}
+
+----
+
 ==Portuguese==
 
 ===Etymology===
