--- a/en/t/tribosphenic.801872.wikitext
+++ b/en/t/tribosphenic.801872.wikitext
@@ -6,5 +6,8 @@
 
 # {{lb|en|biology}} Describing the [[molar]]s of some [[insectivore]]s that have three peaks
 
+====Derived terms====
+* [[pseudotribosphenic]]
+
 ===Further reading===
 *{{pedia|Molar_(tooth)#Tribosphenic|Tribosphenic molar}}
