/* Noun */ # A [[cauliflower ear]]. #* '''2018''', John Harding, ''The Whitechapel Whirlwind: The Jack Kid Berg Story'' #*: His ears were small (fortunately so, given his dramatic hairstyle) and bore no traditional '''cauliflowers'''. <cauliflower#58930253>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -16,6 +16,9 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 
 # {{taxlink|Brassica oleracea var. botrytis|variety|noshow=1}}, an annual variety of [[cabbage]], of which the cluster of young flower stalks and buds is eaten as a vegetable.
 # The edible head or [[curd]] of a cauliflower plant.
+# A [[cauliflower ear]].
+#* '''2018''', John Harding, ''The Whitechapel Whirlwind: The Jack Kid Berg Story''
+#*: His ears were small (fortunately so, given his dramatic hairstyle) and bore no traditional '''cauliflowers'''.
 
 ====Derived terms====
 * {{l|en|broccoflower}}
