/* Translations */ Added Ancient Greek translation of this word. <leather#58933046>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -178,7 +178,7 @@ From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|g
 * Galician: {{t|gl|de coiro}}
 * German: {{t+|de|ledern}}
 * Greek:
-*: Ancient Greek: {{t|grc|δερμάτινος}}
+*: Ancient: {{t|grc|βύρσινος}}, {{t|grc|δερμάτινος}}
 * Lithuanian: {{t|lt|odinis}}
 * Macedonian: {{t|mk|кожен}}
 {{trans-mid}}
