--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -72,6 +72,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 * {{l|en|on the bubble}}
 * {{l|en|stock bubble}}
 * {{l|en|up bubble}}
+* {{l|en|vacuum bubble}}
 {{rel-bottom}}
 
 ====Translations====
