t+ca:[[confiscar]] ([[WT:EDIT|Assisted]]) <seize#58987626>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -123,6 +123,7 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 {{trans-bottom}}
 
 {{trans-top|take possession of (by force, law etc)}}
+* Catalan: {{t+|ca|confiscar}}
 * Czech: {{t|cs|uchvátit}}, {{t+|cs|zabavit|pf}}, {{t|cs|zkonfiskovat}}
 * Danish: {{t|da|beslaglægge}}
 * Dutch: {{t|nl|in beslag nemen}}, {{t|nl|beslag leggen op}}
