--- a/en/o/outraging.801657.wikitext
+++ b/en/o/outraging.801657.wikitext
@@ -9,7 +9,7 @@
 {{en-noun}}
 
 # {{lb|en|archaic}} The committing of an [[outrage]].
-#* Rev. Thomas Smith
+#* {{rfdatek|en|Rev. Thomas Smith}}
 #*: Many were the '''outragings''' and insultings of the Indians upon the English while Sir Edmund Andros was Governor.
 
 ===Anagrams===
