--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -43,7 +43,10 @@ Abbreviation of various terms and phrases.
 # [[circular dichroism|Circular dichroism]].
 # [[chart datum]]
 # [[cross-dresser]]
-# {{lb|en|biochemistry}} {{initialism of|en|cluster of differentiation}}
+# {{lb|en|immunology|biochemistry}} {{initialism of|en|cluster of differentiation}}
+
+====Derived terms====
+* {{sense|cluster of differentiation}} {{l|en|CD3}}, {{l|en|CD4}}, {{l|en|CD7}}, {{l|en|CD8}}, {{l|en|CD10}}, {{l|en|CD11}}, {{l|en|CD13}}, {{l|en|CD15}}, {{l|en|CD18}}, {{l|en|CD19}}, {{l|en|CD20}}, {{l|en|CD21}}, {{l|en|CD22}}, {{l|en|CD23}}, {{l|en|CD30}}, {{l|en|CD33}}, {{l|en|CD35}}, {{l|en|CD38}}, {{l|en|CD43}}, {{l|en|CD45}}, {{l|en|CD46}}, {{l|en|CD52}}, {{l|en|CD54}}, {{l|en|CD56}}, {{l|en|CD79a}}, {{l|en|CD103}}, {{l|en|CD117}}, {{l|en|CD135}}, {{l|en|CD138}}, {{l|en|CD150}}, {{l|en|CD319}}
 
 ====Translations====
 {{trans-top-also|abbreviation of compact disc|compact disc}}
