--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -6,6 +6,7 @@ From {{der|en|grc|μικρός||small}}, or shortened form for modern words form
 
 ===Pronunciation===
 * {{a|US}} {{IPA|en|/ˈmaɪ.kɹoʊ/}}
+* {{audio|en|LL-Q1860 (eng)-Vealhurl-micro.wav ‎|Audio (UK)}}
 
 ===Adjective===
 {{en-adj}}
