--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -22,7 +22,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 {{trans-top|a wager}}
 * Arabic: {{t|ar|رِهَان|m}}, {{t|ar|مُرَاهَنَة|f}}
 * Basque: {{t|eu|trabes}}
-* Bulgarian: {{t+|bg|бас}}, {{t+|bg|облог|m}}
+* Bulgarian: {{t+|bg|бас}}, {{t+|bg|обло́г|m}}
 * Catalan: {{t+|ca|aposta|f}}, {{t|ca|juguesca|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|打賭}}, {{t+|cmn|打赌|tr=dǎdǔ}}
