t+be:[[заклад]] t-balance ([[WT:EDIT|Assisted]]) <bet#59030816>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -22,6 +22,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 {{trans-top|a wager}}
 * Arabic: {{t|ar|رِهَان|m}}, {{t|ar|مُرَاهَنَة|f}}
 * Basque: {{t|eu|trabes}}
+* Belarusian: {{t|be|закла́д|m}}
 * Bulgarian: {{t+|bg|бас}}, {{t+|bg|обло́г|m}}
 * Catalan: {{t+|ca|aposta|f}}, {{t|ca|juguesca|f}}
 * Chinese:
@@ -42,9 +43,9 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Interlingue: {{t|ie|parí}}
 * Italian: {{t+|it|scommessa|f}}
 * Khmer: {{t+|km|ទូ}}
+{{trans-mid}}
 * Kurdish:
 *: Central Kurdish: {{t|ckb|مەرج}}, {{t|ckb|گِرێو}}
-{{trans-mid}}
 * Latin: {{t|la|sponsiō|f}}
 * Latvian: {{t+|lv|likme|f}}, {{t|lv|derības|f-p}}
 * Macedonian: {{t|mk|облог|m}}
