--- a/en/s/stoat.8235.wikitext
+++ b/en/s/stoat.8235.wikitext
@@ -6,6 +6,7 @@
 
 ===Pronunciation===
 * {{IPA|en|/ˈstəʊt/}}
+* {{audio|en|LL-Q1860 (eng)-Vealhurl-stoat.wav ‎|Audio (UK)}}
 * {{rhymes|en|əʊt}}
 
 ===Noun===
