--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -7,6 +7,7 @@ From {{inh|en|enm|dudde|t=cloak, mantle, kind of cloth; ragged clothing or cloth
 
 ===Pronunciation===
 * {{enPR|dŭd}}, {{IPA|en|/dʌd/}}
+* {{audio|en|LL-Q1860 (eng)-Vealhurl-dud.wav ‎|Audio (UK)}}
 * {{rhymes|en|ʌd}}
 
 ===Noun===
