--- a/en/s/sausage meat.776070.wikitext
+++ b/en/s/sausage meat.776070.wikitext
@@ -12,7 +12,7 @@
 *: Mandarin: {{t|cmn|[[香腸]][[肉餡]]}}, {{t|cmn|[[香肠]][[肉馅]]|tr=xiāngcháng ròuxiàn}}
 {{trans-mid}}
 * Finnish: {{t+|fi|makkaramassa}}
-* Russian: {{t|ru|колбасный фарш|m}}
+* Russian: {{t|ru|колба́сный фарш|m}}
 {{trans-bottom}}
 
 [[Category:en:Sausages]]
