t+ca:[[nyec]] t-balance ([[WT:EDIT|Assisted]]) <quack#59057827>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -18,6 +18,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 {{trans-top|sound made by a duck}}
 * Arabic: {{t|ar|بَطْبَطَة|f}}, {{t|ar|زَبْط|m}}
 * Assamese: {{t|as|পেঁক পেঁক}}
+* Catalan: {{t+|ca|nyec|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|嘎|tr=gá}}, {{t+|cmn|呱|tr=guā}}
 * Danish: {{t+|da|rap|n}}
@@ -33,8 +34,8 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Icelandic: {{t|is|andagagg|n}}, {{t|is|guss|n}}
 * Ido: {{t+|io|kroaso}}, {{t+|io|bramo}}
 * Irish: {{t|ga|vác|m}}
-* Italian: {{t|it|qua qua|m}}
 {{trans-mid}}
+* Italian: {{t|it|qua qua|m}}
 * Japanese: {{t|ja|ガー ガー|tr=gā-gā}}, {{t|ja|クェッ クェッ|tr=quek-quek}}, {{t|ja|クワッ クワッ|tr=quwak-quwak}}
 * Macedonian: {{t|mk|ква́к|?}}
 * Malay: {{t|ms|wak}}
