--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -132,7 +132,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 * Turkmen: {{t|tk|reklama}}
 * Ukrainian: {{t+|uk|рекла́ма|f|sc=Cyrl}}, {{t+|uk|оголо́шення|n|sc=Cyrl}}, {{t+|uk|ано́нс|m|sc=Cyrl}}, {{t|uk|зая́ва|f|sc=Cyrl}}
 * Uzbek: {{t+|uz|reklama}}, {{t|uz|eʻlon}}
-* Vietnamese: {{t+|vi|quảng cáo}} ({{t+|vi|廣告|sc=Hani}}), {{t+|vi|giới thiệu}}
+* Vietnamese: {{t+|vi|quảng cáo}} ({{t+|vi|廣告|sc=Hani}}), {{t+|vi|giới thiệu}} ({{t|vi|介紹|sc=Hani}})
 * Volapük: {{t+|vo|noted}}, {{t+|vo|reklam}}, {{t+|vo|nunam}}
 * Võro: {{t|vro|reklaam}}
 * Welsh: {{t+|cy|hysbyseb|f}}
