--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -60,5 +60,18 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Vietnamese: {{t-needed|vi}}
 {{trans-bottom}}
 
+==French==
+
+===Etymology===
+From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japanese manufacturer, from Japanese {{m|ja|任天堂|tr=Nintendō||Luck of Heaven}}.
+
+===Pronunciation===
+* {{IPA|fr|/nintɛndo/}}
+
+==Spanish==
+
+===Pronunciation===
+* {{IPA|es|/nin̪.ten̪.ˈdo/}}
+
 [[Category:English trademarks]]
 [[Category:en:Nintendo]]
