--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japanese manufacturer, from Japanese {{m|ja|任天堂|tr=Nintendō||Luck of Heaven}}.
+From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japanese video game manufacturer, from Japanese {{m|ja|任天堂|tr=Nintendō||Luck of Heaven}}.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/nɪnˈtɛndəʊ/}}
@@ -64,7 +64,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 ==French==
 
 ===Etymology===
-From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japanese manufacturer, from Japanese {{m|ja|任天堂|tr=Nintendō||Luck of Heaven}}.
+Borrowed from {{bor|fr|ja|任天堂}}.
 
 ===Pronunciation===
 * {{IPA|fr|/nintɛndo/}}
