--- a/en/p/pupe.802143.wikitext
+++ b/en/p/pupe.802143.wikitext
@@ -55,3 +55,16 @@ Borrowed from {{bor|fr|NL.|pupa}}, from a specialized use of {{der|fr|la|pūpa}}
 {{la-noun-form|pūpe}}
 
 # {{inflection of|la|pūpus||voc|s}}
+
+----
+
+==Romanian==
+
+===Pronunciation===
+* {{IPA|ro|[ˈpupe]}}
+
+===Verb===
+{{head|ro|verb form}}
+
+# {{verb form of|ro|pupa||3s|pres|sub}}
+# {{verb form of|ro|pupa||3p|pres|sub}}
