--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -40,6 +40,8 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 # {{lb|en|computing}} Any of the small magnetized areas that make up [[bubble memory]].
 # {{lb|en|poker}} The point in a poker [[tournament]] when the last player without a prize loses all their [[chip]]s and leaves the game, leaving only players that are going to win prizes. (e.g., if the last remaining 9 players win prizes, then the point when the 10th player leaves the tournament)
 #: ''Many players tend to play timidly (not play many hands) around the '''bubble''', to keep their chips and last longer in the game.''
+# A group of people who are in [[quarantine]] together.
+#* {{quote-journal|en|date=April 7, 2020|work=New Zealand Herald|title=Covid 19 coronavirus: Police called after Mt Eden landlord tries to move into flat during lockdown |author=|volume=|number=|passage="There was an empty room and this is my house," Mark Philip told the Herald."Where am I supposed to go? Whose '''bubble''' am I supposed to infect?"}}
 
 ====Synonyms====
 * (a laugh) [[giraffe]], [[bubble bath]]
