t+es:[[Jonia]] t+gl:[[Xonia]] t+ca:[[Jònia]] t-balance ([[WT:EDIT|Assisted]]) <Ionia#59105400>

--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -21,16 +21,19 @@ From {{etyl|grc|en}} {{m|grc|Ἰωνία}}.
 
 ====Translations====
 {{trans-top|(historical) Ancient Greek settlement in Asia Minor}}
+* Catalan: {{t|ca|Jònia|f}}
 * Danish: {{t|da|Jonien}}, {{t|da|Ionien}}
 * Finnish: {{t|fi|Joonia}}
 * French: {{t+|fr|Ionie|f}}
+* Galician: {{t|gl|Xonia}}
 * German: {{t|de|Jonien}}, {{t|de|Ionien}}
+{{trans-mid}}
 * Greek: {{t+|el|Ιωνία|f}}
 *: Ancient: {{t|grc|Ἰωνία|f|sc=polytonic}}
-{{trans-mid}}
 * Latin: {{t|la|Iōnia|f}}
 * Old Persian: {{t|peo|𐎹𐎢𐎴|tr=Yauna|sc=Xpeo}}
 * Portuguese: {{t|pt|Iónia|f}} {{qualifier|Portugal}}, {{t|pt|Iônia|f}} {{qualifier|Brazil}}
+* Spanish: {{t|es|Jonia}}
 {{trans-bottom}}
 
 ----
