/* Noun */ fi translation <siphonophore#59109232>

--- a/en/s/siphonophore.801198.wikitext
+++ b/en/s/siphonophore.801198.wikitext
@@ -11,6 +11,12 @@ From {{confix|en|siphono|phore}}.
 #*'''2017''', Derek J Skillings, ‘Life is not easily bounded’, ''Aeon'', [https://aeon.co/essays/what-constitutes-an-individual-organism-in-biology 24 October]:
 #*:Is an individual hydra polyp analogous to an entire '''siphonophore''' colony – or is it more like a member of that colony?
 
+====Translations====
+{{trans-top|hydrozoan of the order Siphonophorae}}
+* Finnish: {{t|fi|uimapolyyppi}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ===Further reading===
 * {{pedia|Siphonophorae}}
 * {{specieslite|Siphonophorae}}
