--- a/en/p/phylloxera.746072.wikitext
+++ b/en/p/phylloxera.746072.wikitext
@@ -15,6 +15,9 @@ From the original, superseded genus name {{m|mul|Phylloxera}}, {{etyl|NL.|en}}, 
 #* '''1977''', {{w|Alistair Horne}}, ''A Savage War of Peace'', New York Review Books 2006, p. 32:
 #*: thirty-five years later the coming of '''phylloxera''' to France launched the Algerian wine industry, and by the mid-twentieth century it had grown to be one of the Mediterranean's biggest producers.
 
+====Related terms====
+* [[phylloxeric]]
+
 ====Synonyms====
 * {{sense|Daktulosphaira vitifoliae}} {{taxlink|Phylloxera vastatrix|species|noshow=1}} (invalid)
 
