--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -43,8 +43,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 # [[pressure|Pressure]]; [[burden]].
 #: {{ux|en|the '''weight''' of care or business}}
 #*{{RQ:Shakespeare Lear|act=V|scene=iii|passage=The '''weight''' of this sad time.}}
-#* {{rfdatek|en|John Milton}}
-#*: For the public all this '''weight''' he bears.
+#* {{RQ:Milton PR|book=2|passage=For the public all this '''weight''' he bears.}}
 # The [[resistance]] against which a [[machine]] acts, as opposed to the power which moves it.
 # {{lb|en|slang|uncountable}} Shipments of (often illegal) drugs.
 #: ''He was pushing '''weight'''.''
