--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -17,13 +17,13 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 #: {{ux|en|If her nose '''bleeds''', try to use ice.}}
 # {{lb|en|transitive}} To [[let]] or [[draw]] [[blood]] from.
 #* '''1979''', Octavia Butler, ''Kindred'':
-#*: "What did they die of?" I asked.<br/>"Fevers. The doctor came and '''bled''' them and purged them, but they still died."<br/>"He '''bled''' and purged babies?"<br/>"They were two and three. He said it would break the fever. And it did. But they ... they died anyway."
+#*: "What did they die of?" I asked.<br>"Fevers. The doctor came and '''bled''' them and purged them, but they still died."<br>"He '''bled''' and purged babies?"<br>"They were two and three. He said it would break the fever. And it did. But they ... they died anyway."
 # {{lb|en|transitive}} To [[take]] large amounts of [[money]] from.
 # {{lb|en|transitive}} To steadily lose (something vital).
 #: {{ux|en|The company was '''bleeding''' talent.}}
 # {{lb|en|intransitive|of an ink or dye}} To [[spread]] from the intended location and [[stain]] the surrounding [[cloth]] or [[paper]].
 #: {{ux|en|[[ink trap|Ink trap]]s [[counteract]] '''bleeding'''.}}
-# {{lb|en|transitive}} To [[remove]] [[air]] bubbles from a [[pipe]] containing [[fluid]]s.
+# {{lb|en|transitive}} To [[remove]] [[air]] bubbles from a [[pipe]] containing other [[fluid]]s.
 # {{lb|en|obsolete|transitive}} To bleed on; to make bloody.
 #* {{RQ:Mlry MrtArthr1|VIII}}
 #*: And so Sir Trystrames '''bledde''' bothe the over-shete and the neyther-shete, and the pylowes and the hede-shete
