--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -352,6 +352,8 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 # {{lb|en|transitive|horse racing}} To [[handicap]] a [[horse]] with a specified weight.
 # {{lb|en|transitive|sport}} To give a certain amount of force to a throw, kick, hit, etc.
 #* {{quote-book|en|author=Tom Valenta|title=Remember Me, Mrs V?: Caring for My Wife: Her Alzheimer's and Others' Stories|url=https://books.google.co.in/books?isbn=1427093741|publisher=ReadHowYouWant|year=2008|passage=With good peripheral vision he spots his teammate, Ray Evans, lurking in the scoring zone and sweeps a perfectly '''weighted''' pass to him.}}
+# {{lb|en|transitive}} {{rfdef|en}}
+#* {{quote-journal|en|date=2020-03-19|author=Marcus Ashworth|title=Cheap Sterling Has Reasons to Be Cheaper|journal={{w|The Washington Post}}|url=https://www.washingtonpost.com/business/cheap-sterling-has-reasons-to-be-cheaper/2020/03/18/3e1a117a-6930-11ea-b199-3a9799c54512_story.html|passage=The U.K. economy is heavily '''weighted''' towards the service sector and the coronavirus pandemic could lead to a 10% fall in gross domestic product in the second quarter, according to economists at Jefferies.}}
 
 ====Translations====
 {{trans-top|add weight}}
