--- a/en/p/pusillanimity.741240.wikitext
+++ b/en/p/pusillanimity.741240.wikitext
@@ -2,7 +2,7 @@
 
 ===Etymology===
 {{PIE root|en|peh₂w}}
-From {{etyl|frm|en}} {{m|frm|pusillanimité}}, from the ecclesiastical {{etyl|la|en}} ''[[pusillanimis]]'', from ''[[pusillus]]'' (puny) + ''[[animus]] (spirit) + ''[[-ous]]. A translation of the Greek {{m|grc|ὀλιγόψυχος||faint-hearted}}.
+{{suffix|en|pusillanimous|alt1=pusillanim(ous)|ity}}, from {{etyl|frm|en}} {{m|frm|pusillanimité}}, from the ecclesiastical {{etyl|la|en}} ''[[pusillanimis]]'', from ''[[pusillus]]'' (puny) + ''[[animus]] (spirit) + ''[[-ous]]. A translation of the Greek {{m|grc|ὀλιγόψυχος||faint-hearted}}.
 
 ===Noun===
 {{en-noun|~|pusillanimities}}
