--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -29,8 +29,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 # {{lb|en|intransitive}} To change direction. <!--state,activity-->
 #: ''The road '''bends''' to the right''
 # {{lb|en|intransitive}} To be inclined; to direct itself.
-#* {{rfdatek|en|John Milton}}
-#*: to whom our vows and wishes '''bend'''
+#* {{RQ:Milton Poems|poem=Arcades|passage=to whom our vows and wishes '''bend'''}}
 # {{lb|en|intransitive|usually|with "down"}} To [[stoop]].
 #: ''He '''bent''' down to pick up the pieces.''
 # {{lb|en|intransitive}} To [[bow]] in prayer, or in token of submission.
