--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -35,8 +35,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 # {{lb|en|transitive}} To cause to make sound by blowing, as a musical instrument.
 # {{lb|en|intransitive}} To make a sound as the result of being blown.
 #: ''In the harbor, the ships' horns '''blew'''.''
-#* {{rfdatek|en|Milton}}
-#*: There let the pealing organ '''blow'''.
+#* {{RQ:Milton Penseroso|passage=There let the pealing organ '''blow'''.}}
 # {{lb|en|intransitive|of a [[cetacean]]}} To [[exhale]] [[visibly]] through the [[spout]] the [[seawater]] which it has taken in while [[feeding]].
 #: ''There's nothing more thrilling to the whale watcher than to see a whale surface and '''blow'''.''
 #: ''There she '''blows'''! (i.e. "I see a whale spouting!")''
