--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -16,10 +16,8 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 {{en-verb|blows|blowing|blew|blown}}
 
 # {{lb|en|intransitive}} To produce an [[air]] [[current]].
-#* '''1606''', [[w:William Shakespeare|William Shakespeare]], ''King Lear'', act 3, scene 2:
-#*: "'''Blow''', winds, and crack your cheeks! rage! '''blow'''!"
-#* '''1613''', [[w:William Shakespeare|William Shakespeare]], ''The Tempest'', act 1, scene 1:
-#*: "'''Blow''' till thou burst thy wind, if room enow!"
+#* {{RQ:Shakespeare Lear|III|ii|296|1|''Lear''. '''Blow''' windes, & crack your cheeks; Rage, '''blow'''<br>You Cataracts, and Hyrricano's ſpout,}}
+#* {{RQ:Shakespeare Tempest|I|i|1|1|Tend to th' Maſters whiſtle: '''Blow''' till thou burſt thy winde, if roome enough.}}
 #* {{rfdatek|en|Walton}}
 #*: Hark how it rains and '''blows'''!
 # {{lb|en|transitive}} To propel by an [[air]] [[current]].
@@ -35,7 +33,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 # {{lb|en|transitive}} To cause to make sound by blowing, as a musical instrument.
 # {{lb|en|intransitive}} To make a sound as the result of being blown.
 #: ''In the harbor, the ships' horns '''blew'''.''
-#* {{RQ:Milton Penseroso|passage=There let the pealing organ '''blow'''.}}
+#* {{RQ:Milton Poems|Il Penseroso|43|pageref=n56|passage=There let the pealing organ '''blow''',}}
 # {{lb|en|intransitive|of a [[cetacean]]}} To [[exhale]] [[visibly]] through the [[spout]] the [[seawater]] which it has taken in while [[feeding]].
 #: ''There's nothing more thrilling to the whale watcher than to see a whale surface and '''blow'''.''
 #: ''There she '''blows'''! (i.e. "I see a whale spouting!")''
@@ -60,56 +58,17 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 # {{lb|en|transitive|slang}} To [[leave]].
 #: ''Let's '''blow''' this joint.''
 # To make [[flyblown]], to defile, especially with fly eggs.
-#* '''1606''', [[w:William Shakespeare|William Shakespeare]], ''[[w:Antony and Cleopatra|Antony and Cleopatra]]'', Act V, scene 2, line 55.
-#*: Shall they hoist me up,<br/>And show me to the shouting [[varletry]]<br/>Of censuring Rome? Rather a ditch in Egypt<br/>Be gentle grave unto me, rather on Nilus' mud<br/>Lay me stark naked, and let the water-flies<br/>'''Blow''' me into [[abhorring]]!
-#* '''1610''', ''[[s:The Tempest|The Tempest]]'', by [[w:William Shakespeare|Shakespeare]], act 3 scene 1
-#*: (FERDINAND)
-#*: I am, in my condition,
-#*: A prince, Miranda; I do think, a king;—
-#*: I [[would]] not so!—and would no more endure
-#*: This wooden slavery than to suffer
-#*: The [[flesh-fly]] '''blow''' my mouth.
+#* {{RQ:Shakespeare Antony|V|ii|365|1|Shall they hoyſt me vp,<br>And ſhew me to the ſhowting [[varletry|Varlotarie]]<br>Of cenſuring Rome? Rather a ditch in Egypt,<br>Be gentle graue vnto me, rather on Nylus mudde<br>Lay me ſtarke-nak'd, and let the water-Flies<br>'''Blow''' me into abhorring;}}
+#* {{RQ:Shakespeare Tempest|III|i|11|1|''[[w:Ferdinand (The Tempest)|Fer.]]'' I am, in my condition<br>A Prince (''Miranda'') I do thinke a King<br>(I would not ſo) and would no more endure<br>This wodden ſlauerie, then to ſuffer<br>The [[flesh-fly|fleſh-flie]] '''blow''' my mouth: heare my ſoule ſpeake.}}
 # {{lb|en|obsolete}} To spread by report; to publish; to disclose.
 #* {{rfdatek|en|Dryden}}
 #*: Through the court his courtesy was '''blown'''.
 #* {{rfdatek|en|Whiting}}
 #*: His language does his knowledge '''blow'''.
 # {{lb|en|obsolete}} To inflate, as with pride; to puff up.
-#* {{quote-book
-|en
-|author         = William Shakespeare
-|authorlink     = William Shakespeare
-|chapter        = [[w:Twelfth Night|Twelfe Night, or VVhat You VVill]]
-|title          = Mr. William Shakespeares Comedies, Histories, & Tragedies: Published According to the True Originall Copies
-|series         = [[w:First Folio|First Folio]]
-|location       = London
-|publisher      = Printed by [[w:William Jaggard|Isaac Iaggard]], and [[w:Edward Blount|Ed[ward] Blount]]
-|year           = c. 1601–1602
-|year_published = 1623
-|section        = {{#if:II
-    | [Act {{uc:II}}{{#if:v
-        |, scene {{lc:v}}]
-            | {{#if:II
-                |, {{maintenance line|please specify the scene number in lowercase Roman numerals}}]
-              }}
-          }}
-    | {{maintenance line|please specify the act number in uppercase Roman numerals}}
-  }}
-|page           = 
-|pages          = 
-|pageurl        = https://books.google.com/books?id=uNtBAQAAMAAJ&pg=PA
-|column         = 
-|columns        = 
-|line           = 
-|lines          = 
-|oclc           = 606515358
-|passage        = Look how imagination '''blows''' him.
-|translation    = 
-|footer         = 
-|brackets       = 
-}}
+#* {{RQ:Shakespeare Twelfth Night|II|v|263|2|O peace, now he's deepely in: looke how imagination '''blowes''' him.}}
 # {{lb|en|intransitive}} To breathe hard or quick; to pant; to puff.
-#* {{RQ:Shakespeare Merry Wives|III|iii|passage=Here is Mistress Page at the door, sweating and '''blowing'''.}}
+#* {{RQ:Shakespeare Merry Wives|III|iii|58|1|''{{abbr|Rob.|Robin}}'' Miſtris ''Ford'', Miſtris ''Ford'': heere's Miſtris ''Page'' at the doore, ſsweating, and '''blowing''', and looking wildely, and would needs ſpeake with you preſently.}}
 # {{lb|en|transitive}} To put out of breath; to cause to blow from fatigue.
 #: ''to '''blow''' a horse''
 #: {{rfquotek|en|Sir Walter Scott}}
