--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -31,11 +31,11 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 #: {{ux|en|Some religions prohibit their adherents from eating '''pig'''.}}
 #* '''2005''', Ross Eddy Osborn, ''Thorns of a Tainted Rose'' {{ISBN|0741425319}}, [https://books.google.com.au/books?id=cdg7kQFFcYoC&pg=PA196&dq=%22Miss+Chastene,+could+you+fetch+me+out+an+extra+plate+of+pig%22&hl=en&sa=X&redir_esc=y#v=onepage&q=%22Miss%20Chastene%2C%20could%20you%20fetch%20me%20out%20an%20extra%20plate%20of%20pig%22&f=false page 196]:
 #*: "Miss Chastene, could you fetch me out an extra plate of '''pig''' and biscuit. My partner can't do without your marvelous cooking."
-# Someone who overeats or eats rapidly and noisily.
+# {{lb|en|derogatory|slang}} Someone who overeats or eats rapidly and noisily.
 #: {{ux|en|You gluttonous '''pig'''! Now that you've eaten all the cupcakes, there will be none for the party!}}
-# A [[lecherous]] or [[sexist]] man.
+# {{lb|en|derogatory|slang}} A [[lecherous]] or [[sexist]] man.
 #: {{ux|en|She considered him a '''pig''' as he invariably stared at her bosom when they talked.}}
-# A [[dirty]] or [[slovenly]] person.
+# {{lb|en|derogatory|slang}} A [[dirty]] or [[slovenly]] person.
 #: {{ux|en|He was a '''pig''' and his apartment a pigpen; take-away containers and pizza boxes in a long, moldy stream lined his counter tops.}}
 # {{senseid|en|police officer}} {{lb|en|now|chiefly|US|UK|Australia|derogatory|slang}} A [[police officer]]. {{defdate|From ''ante'' 1785.}}
 #: {{ux|en|The protester shouted, “Don't give in to the '''pigs'''!” as he was arrested.}}
