--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -271,6 +271,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 {{trans-bottom}}
 
 {{trans-top|To force a current of air upon with the mouth, or by other means}}
+* French: {{t+|fr|souffler}}
 * Maori: {{t|mi|pūkeru}}
 * Russian: {{t+|ru|дуть|impf}}
 {{trans-mid}}
@@ -358,6 +359,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 
 {{trans-top|to fail suddenly destructively}} <!--11-->
 * Finnish: {{t+|fi|rikkoutua}}, {{t+|fi|särkyä}}, {{t+|fi|palaa}} {{q|by electric current}}
+* French: {{t+|fr|exploser en vol}}
 * Slovak: {{t|sk|rupnúť}}
 {{trans-mid}}
 * Spanish: {{t+|es|arruinar}}, {{t+|es|cagar}}
@@ -397,7 +399,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * Catalan: {{t+|ca|llepar}}
 * Dutch: {{t+|nl|pijpen}}
 * Finnish: {{t+|fi|ottaa suihin}}
-* French: {{t+|fr|sucer}}, [[tailler]] une {{t+|fr|pipe}} (''to hew, or to grave, a smoking pipe'')
+* French: {{t+|fr|sucer}}, [[tailler]] une {{t+|fr|pipe}} (''to hew, or to grave, a smoking pipe''), {{t+|fr|pomper le dard}}, {{t+|fr|bourrer la pipe}}
 * German: {{t+|de|blasen}}
 * Greek: {{t+|el|τσιμπουκώνω}}, {{t+|el|πιπώνω}}, {{t|el|παίρνω πίπα}}
 * Korean: {{t|ko|아양떨다}}
