--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -198,7 +198,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Pashto: {{t|ps|شى|m|tr=šay}}, {{t|ps|څيز|m|tr=ciz}}
 * Persian: {{t+|fa|چیز|tr=čiz|sc=fa-Arab}}
 * Polish: {{t+|pl|rzecz|f}}, {{t+|pl|coś|n}}
-* Portuguese: {{t+|pt|coisa|f}}, {{t+|pt|cousa|m}}
+* Portuguese: {{t+|pt|coisa|f}}, {{t+|pt|cousa|f}}
 * Punjabi: {{t|pa|ਵਸਤੂ|f}}
 * Quechua: {{t+|qu|ima}}
 * Romanian: {{t+|ro|lucru|n}}, {{t+|ro|chestie|f}}, {{t+|ro|obiect|n}}
