--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -38,7 +38,9 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 
 ===Noun===
 {{id-noun}}
+
 # [[language]] {{gloss|system of communication using words or symbols}}
+#: {{uxi|id|[[bahasa]] [[Indonesia]]|Indonesian (language)}}
 
 ====Derived terms====
 {{der4|id|
@@ -54,7 +56,6 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 
 ====Compounds====
 * {{l|id|bahasa baku}}
-* {{l|id|bahasa Indonesia}}
 * {{l|id|juru bahasa}}
 * {{l|id|pakar bahasa}}
 
