--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -40,7 +40,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 {{id-noun}}
 
 # [[language]] {{gloss|system of communication using words or symbols}}
-#: {{uxi|id|[[bahasa]] [[Indonesia]]|Indonesian (language)}}
+#: {{uxi|id|'''bahasa''' [[Indonesia]]|Indonesian (language)}}
 
 ====Derived terms====
 {{der4|id|
@@ -82,9 +82,9 @@ From {{etyl|sa|ms}} {{m|sa|भाषा||language}}.
 {{ms-noun|j=بهاس}}
 
 # [[language]] {{gloss|system of communication using words or symbols}}
+#: {{uxi|ms|'''bahasa''' [[Melayu]]|Malay (language)}}
 
 ====Derived terms====
-* {{l|ms|bahasa Melayu}}
 * {{l|ms|jurubahasa||interpreter}}
 
 ====Descendants====
