--- a/en/a/a number of.776983.wikitext
+++ b/en/a/a number of.776983.wikitext
@@ -23,7 +23,7 @@
 * Portuguese: {{t|pt|um número de}}, {{t|pt|uma quantidade de}}, {{t|pt|um tanto de}}
 * Russian: {{t+|ru|ряд|m}}, {{t+|ru|не́сколько}}
 * Spanish: {{t-needed|es}}
-* Ukrainian: {{t+|uk|кілька|tr=kíl'ka}}
+* Ukrainian: {{t+|uk|кі́лька}}
 {{trans-bottom}}
 
 {{trans-top|several of}}
@@ -35,5 +35,5 @@
 * Portuguese: {{t|pt|um tanto de}}
 * Russian: {{t+|ru|ряд|m}}, {{t+|ru|не́сколько}}
 * Spanish: {{t-needed|es}}
-* Ukrainian: {{t+|uk|кілька|tr=kíl'ka}}
+* Ukrainian: {{t+|uk|кі́лька}}
 {{trans-bottom}}
