--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -50,7 +50,7 @@ Borrowed from {{bor|en|nl|bamboe}}, from {{der|en|pt|bambu}}, from {{der|en|ms|b
 * Banjarese: {{t|bjn|buluh}}, {{t|bjn|paring}}
 * Belarusian: {{t|be|бамбу́к|m|sc=Cyrl}}
 * Bengali: {{t+|bn|বাঁশ|sc=Beng}}
-* Bikol Central: {{t|bcl|kawayan}}
+* Bikol Central: {{t|bcl|butong}}
 * Bulgarian: {{t|bg|бамбу́к|m}}
 * Burmese: {{t+|my|ဝါး|sc=Mymr}}
 * Catalan: {{t+|ca|bambú|m}}
