--- a/en/o/Oaxacan.775472.wikitext
+++ b/en/o/Oaxacan.775472.wikitext
@@ -8,3 +8,10 @@
 
 # Relating to, or from, the Mexican state of [[Oaxaca]].
 #: ''Unsurprisingly, the '''Oaxacan''' cheese steak sandwich contains jalapeno peppers.''
+
+===Noun===
+{{en-noun}}
+
+# A native or inhabitant of [[Oaxaca]].
+
+[[Category:en:Demonyms]]
