--- a/en/o/Oaxacan.775472.wikitext
+++ b/en/o/Oaxacan.775472.wikitext
@@ -9,7 +9,7 @@
 # Relating to, or from, the Mexican state of [[Oaxaca]].
 #: ''Unsurprisingly, the '''Oaxacan''' cheese steak sandwich contains jalapeno peppers.''
 
-===Proper Noun===
+===Proper noun===
 {{en-noun}}
 
 # A native or inhabitant of [[Oaxaca]].
