--- a/en/o/Oaxacan.775472.wikitext
+++ b/en/o/Oaxacan.775472.wikitext
@@ -12,6 +12,6 @@
 ===Proper noun===
 {{en-noun}}
 
-# A native or inhabitant of [[Oaxaca]].
+# A native or inhabitant of the Mexican state of [[Oaxaca]].
 
 [[Category:en:Demonyms]]
