t+de:[[Salz in die Wunde streuen]] ([[WT:EDIT|Assisted]]) <rub salt in the wound#59185855>

--- a/en/r/rub salt in the wound.742296.wikitext
+++ b/en/r/rub salt in the wound.742296.wikitext
@@ -27,7 +27,7 @@ Derived from the stinging sensation of salt deliberately being rubbed into an op
 * Crimean Tatar: {{t|crh|carağa tuz basmaq}}
 * Finnish: {{t|fi|vääntää veistä haavassa}}
 * French: {{t+|fr|remuer le couteau dans la plaie}}
-* German: {{t|de|Finger auf die Wunde legen}}
+* German: {{t|de|Finger auf die Wunde legen}}, {{t|de|Salz in die Wunde streuen}}
 * Greek: {{t|el|ρίχνω αλάτι στην πληγή}}, {{t|el|ξύνω πληγές}}
 * Italian: {{t|it|mettere il dito nella piaga}}
 {{trans-mid}}
