--- a/en/c/cranachan.856320.wikitext
+++ b/en/c/cranachan.856320.wikitext
@@ -8,3 +8,10 @@
 {{en-noun|~}}
 
 # A traditional [[Scottish]] [[dessert]] made with [[whipped cream]], [[whisky]], [[oatmeal]], [[honey]], and [[raspberry|raspberries]]
+
+====Translations====
+{{trans-top|dessert}}
+* Japanese: {{t|ja|クラナカン|tr=kuranakan}}
+{{trans-bottom}}
+
+[[Category:en:Desserts]]
