t+bar:[[Dåchs]] ([[WT:EDIT|Assisted]]) <badger#59187921>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -42,6 +42,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Azerbaijani: {{t+|az|porsuq}}
 * Bashkir: {{t|ba|бурһыҡ}}
 * Basque: {{t+|eu|azkonar}}
+* Bavarian: {{t|bar|Dåchs}}
 * Belarusian: {{t|be|барсу́к|m}}
 * Breton: {{t+|br|broc'h|m}}
 * Bulgarian: {{t+|bg|я́зовец|m}}
