t+kw:[[sempel]] ([[WT:EDIT|Assisted]]) <simple#59190919>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -82,6 +82,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 * Chichewa: {{t-needed|ny}}
 * Chinese:
 *: Mandarin: {{t+|cmn|簡單}}, {{t+|cmn|简单|tr=jiǎndān}}, {{qualifier|easy}} {{t+|cmn|容易|tr=róngyì}}, {{t+|cmn|簡易}}, {{t+|cmn|简易|tr=jiǎnyì}}
+* Cornish: {{t|kw|sempel}}
 * Corsican: {{t-needed|co}}
 * Czech: {{t+|cs|jednoduchý|m}}, {{t+|cs|prostý}}, {{t+|cs|lehký}} {{qualifier|easy}}
 * Danish: {{t+|da|enkel}}, {{t|da|simpel}}
