/* Translations */ Also an adjective in blazon. <ermine#59191595>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -147,7 +147,17 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 * Polish: {{t+|pl|gronostaj|m}}
 * Romanian: {{t+|ro|herminat|m|n}}
 * Spanish: {{t+|es|armiño|m}}
-* Swedish: {{t+|sv|hermelin|?}}
+{{trans-bottom}}
+
+===Adjective===
+{{en-adj}}
+
+# {{lb|en|tincture}}: In [[blazon]], of the colour hermine (white with black spots).
+
+{{trans-top|of white colour with black spots on a coat of arms}}
+* Danish: {{t|da|hermelin}}
+{{trans-mid}}
+* Swedish: {{t|sv|hermelin}}
 {{trans-bottom}}
 
 ===Verb===
