--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -150,7 +150,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 {{trans-bottom}}
 
 ===Adjective===
-{{en-adj}}
+{{en-adj|-}}
 
 # {{lb|en|tincture}}: In [[blazon]], of the colour hermine (white with black spots).
 
