--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -46,6 +46,8 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 #: ''He '''blew''' the tires and the engine.''
 # {{lb|en|intransitive}} To suddenly fail destructively.
 #: ''He tried to sprint, but his ligaments '''blew''' and he was barely able to walk to the finish line.''
+# {{lb|en|intransitive}} (used to express displeasure or frustration) [[damn|Damn]].
+#* {{quote-book|1=en|year=1908|author=Kenneth Grahame|authorlink=Kenneth Grahame|title={{w|The Wind in the Willows}}|publisher=Wordsworth Classics|location=London|year_published=1993|page=11|passage=[H]e suddenly flung down his brush on the floor, said "Bother!" and "Oh '''blow'''!" and also "Hang spring-cleaning!" and bolted out of the house without even waiting to put on his coat.}}
 # {{lb|en|intransitive|slang}} To be very [[undesirable]]. (See also {{m|en|suck}}.)
 #: ''This '''blows'''!''
 # {{lb|en|transitive|slang}} To recklessly [[squander]].
