--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -336,6 +336,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 {{trans-mid}}
 * Portuguese: {{t+|pt|doença de descompressão|f}}
 * Swedish: {{t|sv|dykarsjuka|c}}, {{t|sv|tryckfallssjuka|c}}
+* Thai: {{t|th|โรคน้ำหนีบ}}, {{t|th|น้ำหนีบ}}
 {{trans-bottom}}
 
 {{trans-top|heraldry: one of the ordinaries}}
