/* Old High German */ <bitten#59201333>

--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -79,7 +79,11 @@ From {{inh|goh|gem-pro|*bidjaną}}, whence also {{cog|osx|biddian}}, {{cog|ang|b
 {{goh-conj-st|class=5|bitt|bat|bāt|bët|impr=bitti}}
 
 ====Descendants====
-* {{desc|de|bitten}}
+* {{desc|gmh|bitten}}
+** {{desc|bar|-}}
+**: {{desc|cim|pittan}}
+**: {{desc|mhn|pitten}}
+** {{desc|de|bitten}}
 
 ----
 
