--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -117,10 +117,10 @@ Borrowed from {{bor|cim|en|CD}}.
 ===Noun===
 {{cim-noun|f|CD}}
 
-# {{lb|cim|Luserna}} [[CD]] {{gl|compact disc}}
+# {{lb|cim|Luserna}} [[#English|CD]] {{gl|compact disc}}
 
 ===References===
-* {{R:Patuzzi}}
+* {{R:CLM}}
 
 {{c|cim|Music}}
 
