--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -254,7 +254,8 @@ From {{inh|non|gem-pro|*meganą}}, {{m|gem-pro|*maganą}}.
 ----
 
 ==Portuguese==
-
+===Etymology===
+From {{der|pt|grc|μέγας||great, large, mighty}}
 ===Pronunciation===
 * {{IPA|pt|/ˈmɛɡa/}}
 * {{hyphenation|pt|me|ga}}
