t+ru:[[на грани срыва]] ([[WT:EDIT|Assisted]]) <at the end of one's tether#59207409>

--- a/en/a/at the end of one's tether.776810.wikitext
+++ b/en/a/at the end of one's tether.776810.wikitext
@@ -21,5 +21,6 @@
 * German: {{t|de|mit seiner Geduld am Ende}}
 * Italian: {{t|it|al limite della sopportazione}}
 * Korean: {{t|ko|진퇴양난에 빠진}}
+* Russian: {{t|ru|на грани срыва}}
 * Scottish Gaelic: {{t|gd|aig an dùbhlan le}}
 {{trans-bottom}}
