--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -4,7 +4,7 @@
 {{wikispecies|Sus}}
 [[Image:Sow with piglet.jpg|thumb|right|250px|Domestic '''pigs''' (''Sus scrofa domestica'')]]
 
-===Hello 1===
+===Etymology 1===
 From {{inh|en|enm|pigge|t=pig, pigling}} (originally a term for a young pig, with adult pigs being {{m|enm|swine}}), apparently from {{inh|en|ang|*picga}} (attested only in compounds, such as {{m|ang|picgbrēad|t=mast, pig-fodder}}). Compare Middle Dutch {{cog|dum|pogge}}, {{m|dum|puggen}}, {{m|dum|pegsken|t=pigling}}.
 
 A connection to early modern {{cog|nl|bigge}} (contemporary {{m|nl|big|t=piglet}}), {{cog|fy|bigge|t=pigling}}{{,}} and similar terms in {{cog|gml|-}} is sometimes proposed, "but the phonology is difficult".<ref name="NED">''A new English dictionary on historical principles''</ref> Some sources say the words are "almost certainly not" related,<ref>{{R:Dictionary.com}}</ref> others consider a relation "probable, but not certain".<ref>M. Philippa: "Big". In: Etymologisch Woordenboek van het Nederlands, 2003-09.</ref>
