--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -59,7 +59,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 
 ====Translations====
 {{trans-top|to cause to shape into a curve}}
-* Albanian: {{t+|sq|ep}}
+* Albanian: {{t+|sq|ep}}, {{t+|sq|epem}}
 * Arabic: {{t|ar|ثَنَى}}
 * Armenian: {{t-needed|hy}}
 * Azerbaijani: {{t+|az|bükmək}}, {{t+|az|əymək}}
