--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -1,8 +1,7 @@
 ==English==
 {{wikipedia}}
 
-===Etymology===
-From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|gem-pro|*leþrą||leather}}, from {{inh|en|ine-pro|*létrom||leather}}. Cognate with {{cog|fy|leare||leather}}, {{cog|nds|Leder||leather}}, {{cog|nl|leder}}, {{m|nl|leer||leather}}, {{cog|de|Leder||leather}}, {{cog|da|læder||leather}}, {{cog|sv|läder||leather}}, {{cog|is|leður||leather}}. The Celtic forms ({{cog|cy|lledr}}, {{cog|sga|lethar}}) ultimately derive from the Germanic.
+text
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/ˈlɛðə/}}
