--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -316,6 +316,19 @@ From {{inh|fro|LL.|domna}}, shortened variant of {{inh|fro|la|domina}}.
 
 ----
 
+==Romanian==
+
+===Pronunciation===
+* {{IPA|ro|[ˈdame]}}
+
+===Noun===
+{{head|ro|noun form|g=f}}
+
+# {{noun form of|ro|damă||indef|pl}}
+# {{noun form of|ro|damă||indef|gen//dat|s}}
+
+----
+
 ==Spanish==
 
 ===Verb===
