--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -215,6 +215,11 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Russian: {{t+|ru|подборо́док|m}}, {{t+|ru|борода́|f}} {{qualifier|normally "beard"}}
 * Rwanda-Rundi: {{t|rw|akananwa}}, {{t|rw|uru-sakanwa}}
 * Sabah Bisaya: {{t|bsy|ajai}}, {{t|bsy|rowoh}}
+* Sami:
+*: Inari: {{t|smn|käibi}}
+*: Northern: {{t|se|gáibi}}
+*: Skolt: {{t|sms|käi´bb}}
+*: Southern: {{t|sma|gaejpie}}
 * Sanskrit: {{t|sa|चिबुकम्}}
 * Sardinian: {{t|sc|baedhu|m|alt=baédhu}}, {{t|sc|fabedhu|m}}
 * Scottish Gaelic: {{t|gd|smiogaid|m}}
