--- a/en/a/abaco.4397.wikitext
+++ b/en/a/abaco.4397.wikitext
@@ -27,7 +27,7 @@ From {{etyl|la|it}} {{m|la|abacus||counting board}}, from {{etyl|grc|it}} {{m|gr
 # [[multiplication table]]
 #: {{syn|it|tavola pitagorica}}
 # The [[art]] of [[counting]].
-# {{lb|it|historical|Ancient Rome}} A [[board]] used to [[expose]] [[pottery]] during [[banquet]]s.
+# {{lb|it|historical|Ancient Rome}} A [[board]] used to [[display]] [[pottery]] during [[banquet]]s.
 # {{lb|it|furniture}} [[abacus]] {{gloss|church furniture}}
 #: {{syn|it|credenza|q1=more common}}
 # {{lb|it|architecture}} [[abacus]] {{gloss|uppermost portion of the capital of a column}}
