--- a/en/k/kerel.4473.wikitext
+++ b/en/k/kerel.4473.wikitext
@@ -42,8 +42,16 @@ From {{inh|nl|dum|kerle}}. {{etystub|nl}}
 
 ==Romani==
 
+===Etymology===
+From {{inh|rom|sa|करोति|tr=karóti}}, from {{inh|rom|inc-pro|*karáwti}}, from {{inh|rom|iir-pro|*kr̥náwti}}, ultimately from {{inh|rom|ine-pro|*kʷer-}}. Cognate with {{cog|hi|करना}}, {{cog|pa|ਕਰਨਾ}}, {{cog|ne|गर्नु}}, {{cog|gu|કરવું}}, {{cog|mr|करणे}}, and {{cog|bn|করা}}.
+
+===Pronunciation===
+* {{IPA|rom|/ˈke.rel/|/ˈkə.rel/}}
+
 ===Verb===
 {{rom-verb|el}}
 
 # to [[do]]
+#: {{uxi|rom|Na ʒanav so te '''kerav'''.|t=I don't know what to do.}}
 # to [[make]], [[create]], [[produce]]
+#: {{uxi|rom|Morro dad '''kerdǎs''' o kazàn.|t=My dad made the kettle.}}
