/* Derived terms */ <marmot#59265498>

--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -35,6 +35,10 @@ From {{bor|en|frm|marmote}}, from {{der|en|fro|marmotaine}}, {{m|fro|marmontaine
 * {{vern|yellow-bellied marmot}}
 {{der-bottom}}
 
+====Descendants====
+* {{desc|ja|マーモット|bor=1|tr=māmotto}}
+* {{desc|ko|마멋|bor=1}}
+
 ====Translations====
 {{trans-top|rodent of the genera Marmota}}
 * Albanian: {{t-check|sq|marmota}}
