/* Descendants */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <marmot#59265524>

--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -38,6 +38,7 @@ From {{bor|en|frm|marmote}}, from {{der|en|fro|marmotaine}}, {{m|fro|marmontaine
 ====Descendants====
 * {{desc|ja|マーモット|bor=1|tr=māmotto}}
 * {{desc|ko|마멋|bor=1}}
+* {{desc|th|มาร์มอต|bor=1}}
 
 ====Translations====
 {{trans-top|rodent of the genera Marmota}}
