Rename to [[Template:examples]] <consonance#59265811>

--- a/en/c/consonance.746531.wikitext
+++ b/en/c/consonance.746531.wikitext
@@ -5,7 +5,7 @@ From {{etyl|fro|en}}, from {{etyl|la|en}} {{lena}} {{m|la|consonantia}}
 
 ===Noun===
 {{en-noun|~}}
-{{examples-right|sense=prosody|examples=''lady lounges lazily, dark deep dread crept in''}}
+{{examples|sense=prosody|examples=''lady lounges lazily, dark deep dread crept in''}}
 
 # {{lb|en|prosody}} The [[repetition]] of [[consonant]] [[sounds]], but not [[vowels]] as in [[assonance]].
 # {{lb|en|chiefly|music}} [[harmony|Harmony]]; [[agreement]]; lack of [[discordance]].
