--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -16,6 +16,7 @@
 # {{lb|en|dated|_|British|_|&|_|Australian|[[w:Long and short scales|long scale]]}} A [[trillion]] [[quintillion]]: 1 followed by 48 zeros, 10<sup>48</sup>.
 
 ====Synonyms====
+* {{sense|10<sup>27</sup>}} a [[w:Long and short scales|long scale]] [[quadrilliard]]
 * {{sense|10<sup>48</sup>}} a [[w:Long and short scales|short scale]] [[quindecillion]]
 
 ====Translations====
