--- a/en/c/crowdie.856323.wikitext
+++ b/en/c/crowdie.856323.wikitext
@@ -29,7 +29,7 @@ Evolution of Early Scots {{m|sco|crud}}, cognate with Middle English and Early M
 ===Noun===
 {{sco-noun|-}}
 
-# (''Especially in the Highlands'') A soft fresh cheese similar to the English [[cottage cheese]] which is traditionally produced from naturally soured milk. In some modern preparations it is rolled in oats, or mixed with herbs or spices such as peppercorns.
+# (''Especially in the Highlands'') A soft fresh cheese, similar to the English [[cottage cheese]], which is traditionally produced from naturally soured milk. In some modern preparations it is rolled in oats, or mixed with herbs or spices such as peppercorns.
 # A dish of [[oatmeal]] mixed with cold water, similar to {{l|sco|brose}}.
 # A mixed food of many ingredients.
 
