--- a/en/t/trickling.720060.wikitext
+++ b/en/t/trickling.720060.wikitext
@@ -8,5 +8,5 @@
 ===Noun===
 {{en-noun}}
 
-# The act of something that trickles.
+# The act or result of something that trickles.
 #: ''the '''tricklings''' of water down the cave walls''
