Undo revision 59340875 by [[Special:Contributions/173.72.124.186|173.72.124.186]] ([[User talk:173.72.124.186|talk]]) <月#59340932>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -128,9 +128,9 @@ From {{inh|zh|sit-pro|*s-ŋʷ(j)a-t||moon; star}}, whence also {{w|Magar}} {{m|u
 
 ====Readings====
 {{ja-readings
-|goon=がち<ぐゎち, ごち
-|kanon=げつ<ぐゑつ
-|kanyoon=がつ<ぐゎつ
+|goon=がち<ぐわち, ごち
+|kanon=げつ<げつ<ぐゑつ
+|kanyoon=がつ<ぐわつ
 |kun=つき-
 |nanori=おと, す, もり, がっ, ずき
 }}
