--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -132,7 +132,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Central Melanau: {{t|mel|babui}}
 * Chamicuro: {{t|ccc|kuuchi}}
 * Chamorro: {{t|ch|babui}}
-* Chechen: {{t|ce|жаргӏа}}, {{t|ce|хьакха}}
+* Chechen: {{t|ce|хьакха}}, {{t|ce|жаргӏа}}
 * Chepang: {{t|cdm|प्‍याक्‌}}
 * Cherokee: {{t|chr|ᏏᏆ}}
 * Chichewa: {{t|ny|nkhumba}}
