t+mhn:[[marmota]] t-balance ([[WT:EDIT|Assisted]]) <marmot#59370213>

--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -81,13 +81,14 @@ From {{bor|en|frm|marmote}}, from {{der|en|fro|marmotaine}}, {{m|fro|marmontaine
 * Korean: {{t|ko|마멋}}
 * Kyrgyz: {{t+|ky|суур}}
 * Ladin: {{t|lld|marmota}}
-{{trans-mid}}
 * Latvian: {{t|lv|murkšķis|m}}
 * Lithuanian: {{t|lt|švilpikas|m}}
 * Macedonian: {{t|mk|мрмот|m}}
+{{trans-mid}}
 * Maltese: {{t|mt|far il-ġebel}}
 * Manchu: {{t|mnc|ᡨᠠᡵᠪᠠᡥᡳ}}
 * Mongolian: {{t+|mn|тарвага}}
+* Mòcheno: {{t|mhn|marmota|f}}
 * Navajo: {{t|nv|dilchaʼ}}
 * Norwegian: {{t|no|murmeldyr|n}}
 * Occitan: {{t+|oc|marmòta}}, {{t|oc|muret}}
