t+fr:[[flèche du Parthe]] t+fi:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <parting shot#59376625>

--- a/en/p/parting shot.775535.wikitext
+++ b/en/p/parting shot.775535.wikitext
@@ -18,7 +18,9 @@ Believed to be a variation of {{m|en|Parthian shot}}, referring to a military ma
 
 ====Translations====
 {{trans-top}}
+* Finnish: {{t-needed|fi}}
 {{trans-mid}}
+* French: {{t+|fr|flèche du Parthe|f}}
 {{trans-bottom}}
 
 ===References===
