Reverted edits by [[Special:Contributions/2600:8801:A306:1400:548B:F553:F68B:3FE7|2600:8801:A306:1400:548B:F553:F68B:3FE7]]. If you think this rollback is in error, please leave a message on my talk page. <frick#59393452>

--- a/en/f/frick.741824.wikitext
+++ b/en/f/frick.741824.wikitext
@@ -2,8 +2,8 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|en|/frik/}}
-* {{rhymes|en|k}}
+* {{IPA|en|/fɹɪk/}}
+* {{rhymes|en|ɪk}}
 
 ===Interjection===
 {{en-interj}}
