--- a/en/h/hander.4308.wikitext
+++ b/en/h/hander.4308.wikitext
@@ -3,7 +3,7 @@
 
 ===Pronunciation===
 * {{IPA|en|/ˈhændə(ɹ)/}}
-* {{rhymes|en|ændə(ɹ)}}
+* {{rhymes|en|ændə(r)}}
 
 ===Etymology 1===
 {{suffix|en|hand|er|id2=agent noun|t1=verb}}
