+rhyme [[Rhymes:Dutch/œy̯t|-œy̯t]] <kluit#59402391>

--- a/en/k/kluit.4474.wikitext
+++ b/en/k/kluit.4474.wikitext
@@ -6,6 +6,7 @@ Cognate with {{cog|en|cloud||}}. Related to Dutch {{m|nl|kloot||ball; testicle}}
 ===Pronunciation===
 * {{IPA|nl|/klœy̯t/}}
 * {{audio|nl|Nl-kluit.ogg|Audio}}
+* {{rhymes|nl|œy̯t}}
 
 ===Noun===
 {{nl-noun|f|-en|kluitje}}
