t+nl:[[scrollwieltje]] ([[WT:EDIT|Assisted]]) <mouse wheel#59429772>

--- a/en/m/mouse wheel.741247.wikitext
+++ b/en/m/mouse wheel.741247.wikitext
@@ -13,7 +13,7 @@
 ====Translations====
 {{trans-top|disc used for scrolling}}
 * Czech: {{t|cs|skrolovací kolečko|n}}
-* Dutch: {{t+|nl|muiswieltje|n}}
+* Dutch: {{t+|nl|muiswieltje|n}}, {{t|nl|scrollwieltje|n}}
 * Finnish: {{t|fi|hiiren rulla}}
 * French: {{t|fr|molette de souris|f}}
 {{trans-mid}}
