/* Derived terms */ <individuation#59437629>

--- a/en/i/individuation.742109.wikitext
+++ b/en/i/individuation.742109.wikitext
@@ -9,4 +9,4 @@
 # {{lb|en|biology}} The [[differentiation]] of tissues.
 
 ====Derived terms====
-* {{W|Principle of Individuation}}
+* {{W|principle of individuation}}
