t+kab:[[taɣawsa]] t-balance ([[WT:EDIT|Assisted]]) <thing#59437669>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -167,14 +167,15 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Irish: {{t|ga|rud|m}}, {{t|ga|ní|m}}
 * Italian: {{t+|it|cosa|f}}
 * Japanese: {{t+|ja|物|tr=もの, mono|sc=Jpan}}
+* Kabyle: {{t|kab|taɣawsa|f}}
 * Kannada: {{t+|kn|ವಸ್ತು}}
 * Karakhanid: {{t|xqa|نانْكْ|tr=nēŋ}}
 * Kazakh: {{t|kk|нәрсе|sc=Cyrl}}
 * Khmer: {{t+|km|របស់}}, {{t+|km|វត្ថុ}}
 * Korean: {{t+|ko|물건}}, {{t+|ko|것}}
+{{trans-mid}}
 * Kyrgyz: {{t+|ky|нерсе|sc=Cyrl}}
 * Ladin: {{t|lld|cossa|f}}
-{{trans-mid}}
 * Ladino: {{t|lad|koza}}
 * Lao: {{t|lo|ສິ່ງ}}
 * Latin: {{t+|la|rēs|f}}, {{t+|la|ens|n}}
