--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -80,6 +80,7 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 ====Translations====
 {{trans-top|''transitive'' to tie or fasten tightly together, with a cord, band, ligature, chain, etc.}}
 * Afrikaans: {{t+|af|bind}}
+* Albanian: {{t+|sq|lidh}}
 * Arabic: {{t|ar|أَسَرَ}}, {{t|ar|رَبَطَ}}
 * Armenian: {{t+|hy|կապել}}
 * Basque: {{t-needed|eu}}
@@ -145,6 +146,7 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 {{trans-bottom}}
 
 {{trans-top|''transitive'' connect}}
+* Albanian: {{t+|sq|lidh}}
 * Arabic: {{t|ar|رَبَطَ}}
 *: Egyptian Arabic: {{t|arz|ربط|tr=rabaṭ|sc=Arab}}, {{t|arz|وصل|tr=waṣal|sc=Arab}}
 * Belarusian: {{t|be|вяза́ць|sc=Cyrl}}
